--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,24 @@ body {
   font-weight: 300;
   background: #fff;
   color: #5a5a5a;
+  cursor: default;
 }
 
 .container {
-  max-width: 1140px;
+  max-width: 1150px;
   width: 100%;
   margin: 0 auto;
+  text-align: center;
 }
 
 .container-fluid {
   width: 100%;
   margin: 0;
   background: #f4f4f4;
+}
+
+.container-fluid-p {
+  background: #ed145b;
 }
 
 .container-b {
@@ -97,6 +103,7 @@ body {
   letter-spacing: 0.38px;
   border: none;
   background: rgba(0,0,0,0);
+  margin: 0 auto;
 }
 
 .btn-primary {
@@ -108,6 +115,23 @@ body {
   color: #f4f4f4;
   font-size: 15px;
   margin: 65px auto;
+}
+
+.btn-prices {
+  background: #f4f4f4;
+  color: #5a5a5a;
+  margin: 0 auto;
+  position: relative;
+  top: 25px;
+}
+
+.btn-buy {
+  margin: 30px auto 0;
+}
+
+.btn-rev {
+  color: #ed145b;
+  background: #fff;
 }
 
 .btn-clkb:hover {
@@ -126,14 +150,14 @@ body {
 }
 
 .page-section h4 {
+  display: inline-block;
   color: #5a5a5a;
   font-size: 38px;
   font-weight: 300;
   font-style: italic;
   line-height: 1.4em;
   letter-spacing: 0.95px;
-  text-align: center;
-  margin: 150px auto 0;
+  margin: 140px auto 0;
 }
 
 .page-section h6 {
@@ -157,7 +181,7 @@ body {
 .page-section p {
   font-size: 15px;
   font-weight: 300;
-  line-height: 1.8em;
+  line-height: 2em;
   letter-spacing: 0.38px;
   text-align: center;
   margin: 0;
@@ -175,12 +199,12 @@ body {
 .intro-section h2 {
   font-size: 46px;
   font-weight: 300;
-  line-height: 24px;
+  line-height: 1.1em;
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 1.15px;
   color: #fff;
-  margin-top: 220px;
+  margin-top: 150px;
 }
 
 .intro-section h2 span {
@@ -255,21 +279,23 @@ body {
 
 
 /* ///////////////// */
-/* Services */
+/* Services section */
 .page-section .feature-boxes {
-  padding: 0 80px;
+  padding: 0 70px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 95px auto 120px;
+  margin: 80px auto 110px;
+  position: relative;
 }
 
 .page-section .feature-box {
   max-width: 138px;
+  margin: 10px 15px;
 }
 
 .page-section .feature-box h6 {
-  margin: 34px auto 0;
+  margin: 30px auto 0;
 }
 
 .services .container-fluid {
@@ -325,6 +351,113 @@ body {
   right: 0;
 }
 
+/* ////////////////////////// */
+/* Prices section */
+.page-section .price-boxes {
+  max-width: 1200px;
+  padding-bottom: 120px;
+  margin-top: 75px;
+  margin-bottom: 0;
+  justify-content: center;
+  text-align: center;
+}
+
+.price-box {
+  max-width: 262px;
+  background: #fff;
+  margin: 15px;
+}
+
+.price-box:hover .price-box-header {
+  background: #ed145b;
+}
+
+.price-box-header {
+  width: 100%;
+  background: #5a5a5a;
+  font-weight: 700;
+  color: #f4f4f4;
+}
+
+.prices h5 {
+  font-size: 50px;
+  line-height: 0.8em;
+  letter-spacing: 1.25px;
+  margin: 0 auto;
+  padding-top: 33px;
+  vertical-align: sub;
+}
+
+.prices h5 > span {
+  font-size: 20px;
+  vertical-align: 7%;
+}
+
+.prices p.period {
+  font-weight: 700;
+}
+
+.price-box-main {
+  padding: 55px 30px 30px;
+}
+
+.page-section .offer-boxes {
+  margin: 140px auto 130px;
+  padding: 0;
+  justify-content: center;
+}
+
+.page-section .offer-box {
+  max-width: 350px;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  margin: 15px;
+}
+
+.offer-box .col-l {
+  margin-top: 10px;
+  margin-right: 13px;
+}
+
+.offer-box .col-r {
+  margin-left: 13px;
+}
+
+.offer-box .col > * {
+  text-align: left;
+}
+
+.offer-box h6 {
+  margin: 0 0 5px;
+}
+
+.prices .container-fluid-p .join-us {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  overflow: hidden;
+}
+
+.prices .container-fluid-p h4 {
+  color: #fff;
+  font-style: initial;
+  text-transform: uppercase;
+  line-height: 50px;
+  margin: 10px 5px;
+}
+
+.prices .container-fluid-p h4 span {
+  font-weight: 700;
+}
+
+.prices .container-fluid-p .btn {
+  margin: 10px 5px;
+  position: relative;
+  left: 15px;
+}
+
 
 /* //////////////////// */
 /* Page footer */
@@ -340,6 +473,8 @@ body {
 
 .page-footer > .container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   position: relative;
 }
 
@@ -351,8 +486,7 @@ body {
   line-height: 1.6em;
   letter-spacing: 0.1;
   text-transform: uppercase;
-  margin: 0;
-  display: inline-block;
+  margin: 0 10px;
 }
 
 .page-footer p.right {
@@ -396,12 +530,13 @@ body {
   }
 }
 
-@media only screen and (max-width: 1380px) {
-  /* .container-right {
-    width: 85%;
-  } */
+@media only screen and (max-width: 1200px) {
+  .container-med {
+    width: 90%;
+    padding: 100px 10px;
+  }
 
-  .page-section h4, .page-section p {
-    font-size: 0.85em;
+  .page-section .feature-boxes {
+    justify-content: space-around;
   }
 }
