--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,15 @@ body {
   width: 85%;
 }
 
-.container-left {}
+.container-left {
+  padding: 75px 0 75px;
+  margin: 0 1% 0 5%;
+}
 
-.container-right {
+/* .container-right {
   position: relative;
   left: 12%;
-}
+} */
 
 .container-min {
   max-width: 680px;
@@ -183,7 +186,7 @@ body {
   height: 2px;
   background-color: #ed145b;
   border: none;
-  margin: 40px auto;
+  margin: 30px auto 35px;
 }
 
 .page-section p {
@@ -231,18 +234,17 @@ body {
 
 /* ///////////////// */
 /* About */
-.about .grid h4 {
-  margin: 110px auto 0;
+.page-section .flex h4 {
+  margin: 100px auto 0;
   text-align: left;
 }
 
-.about .grid p {
+.page-section .flex p {
   text-align: left;
 }
 
-.about .video, .about .video h6 {
-  text-decoration: none;
-  text-align: left;
+.about .video {
+  padding: 0;
 }
 
 .about .video img {
@@ -254,24 +256,33 @@ body {
   opacity: 0.85;
 }
 
-.about .grid {
-  display: grid;
-  grid-template-columns: 33% 67%;
+.page-section .flex {
+  padding: 0 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: center;
 }
 
-.about .item hr {
-  margin: 35px 0 45px;
+.page-section .item hr {
+  margin: 30px 0 40px;
 }
 
-.about .item {
-  max-width: 500px;
+/* .page-section .item {
+  align-self: center;
+} */
+
+.page-section .item-1 {
+  max-width: 470px;
+  flex-basis: 33%;
 }
 
-.about .item-2 {
+.page-section .item-2 {
   max-width: 1030px;
+  flex-basis: 67%;
 }
 
-.about .mac {
+.page-section .mac {
   width: 100%;
   position: relative;
   top: 14%;
@@ -475,6 +486,9 @@ body {
 .page-section .latest-box {
   max-width: 360px;
   background: #f4f4f4;
+}
+
+.page-section .latest-boxes a {
   margin: 30px 10px;
 }
 
@@ -543,6 +557,44 @@ body {
 
 .latest-box .latest-box-note > * {
   text-align: left;
+}
+
+.prices .show-more {
+  margin: 0 auto 60px;
+}
+
+.prices .show-more > * {
+  margin: 1px auto 1px;
+}
+
+
+/* //////////////////////// */
+/* Contact section */
+.contact .container-fluid.diver {
+  height: 650px;
+  background: url('../img/diver.png') no-repeat;
+}
+
+.contact .container-min > * {
+  color: #fff;
+}
+
+.contact .btn {
+  margin-top: 50px;
+}
+
+.contact .flex {
+  justify-content: flex-start;
+  padding: 75px 0;
+}
+
+.contact .item-2 {
+  max-width: 830px;
+}
+
+.contact .browser {
+  max-width: 800px;
+  width: 100%;
 }
 
 
